hphp/hack/test/typecheck/enum_class/abstract_diamond.bad.php.rust_elab.exp
File "abstract_diamond.bad.php", line 4, characters 21-21:
`HH\BuiltinAbstractEnumClass` is an implementation internal class that cannot be used directly (Naming[2053])
File "abstract_diamond.bad.php", line 9, characters 21-21:
`HH\BuiltinAbstractEnumClass` is an implementation internal class that cannot be used directly (Naming[2053])
File "abstract_diamond.bad.php", line 12, characters 21-21:
`HH\BuiltinAbstractEnumClass` is an implementation internal class that cannot be used directly (Naming[2053])
File "abstract_diamond.bad.php", line 16, characters 12-12:
`HH\BuiltinEnumClass` is an implementation internal class that cannot be used directly (Naming[2053])
File "abstract_diamond.bad.php", line 16, characters 12-12:
This class must be declared `abstract`, or provide an implementation for the abstract constant `Y` (Typing[4047])
  File "abstract_diamond.bad.php", line 16, characters 32-32:
  `H` uses `G`
  File "abstract_diamond.bad.php", line 12, characters 38-38:
  `G` uses `E`
  File "abstract_diamond.bad.php", line 5, characters 19-19:
  The constant is defined here
File "abstract_diamond.bad.php", line 22, characters 11-11:
Cannot reference abstract constant `H::Y` directly (Typing[4129])
  File "abstract_diamond.bad.php", line 5, characters 19-19:
  Declaration is here
